# personal-budget-platform

./: .gitignore  AGENTS.md  CLAUDE.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260521_0001_database_foundation.py  20260521_0002_accounts_categories.py  20260521_0003_transactions_splits.py  20260521_0004_import_pipeline.py  20260521_0005_category_rules.py  20260521_0006_budgets.py  20260521_0007_debts.py  20260521_0008_rewards_cashback.py  20260521_0009_audit_log.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  accounts.py  auth.py  budgets.py  categories.py  category_rules.py  debts.py  imports.py  rewards.py  transactions.py  users.py  workspaces.py
backend/app/core/: config.py
backend/app/db/: seed_data.py  session.py
backend/app/models/: __init__.py  account.py  audit.py  budget.py  category.py  category_rule.py  currency.py  debt.py  exchange_rate.py  imports.py  reward.py  transaction.py  user.py  workspace.py
backend/app/schemas/: __init__.py  account.py  auth.py  budget.py  category.py  category_rule.py  debt.py  imports.py  reward.py  transaction.py  user.py  workspace.py
backend/tests/: test_accounts_categories.py  test_alembic_config.py  test_audit_log.py  test_auth_permissions.py  test_auth_sessions.py  test_budgets.py  test_category_rules.py  test_config.py  test_database_foundation.py  test_debts.py  test_health.py  test_import_pipeline.py  test_rewards.py  test_transaction_fingerprints.py  test_transactions.py  test_users.py  test_workspaces.py
(+49 files in other folders)
